build/manifests/k8s/services/todo/service.yml
##################################################################################################
# todo service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
      version: v1
  template:
    metadata:
      labels:
        app: todo
        version: v1
    spec:
      serviceAccountName: todo
      containers:
        - image: filario/usplay-api-todo:latest
          imagePullPolicy: Always
          name: todo
          ports:
            - containerPort: 8080
          resources:
---
apiVersion: v1
kind: Service
metadata:
  name: todo
  labels:
    app: todo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: todo
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
    - "*"
  gateways:
    - usplay-gateway
  http:
    - match:
        - uri:
            exact: /api/v1/todo
          ignoreUriCase: true
      rewrite:
        uri: /todo
      route:
        - destination:
            port:
              number: 80
            host: todo
    - match:
        - uri:
            prefix: /api/v1/todo/
          ignoreUriCase: true
      rewrite:
        uri: /todo/
      route:
        - destination:
            port:
              number: 80
            host: todo
    - match:
        - uri:
            exact: /api/v1/todos
          ignoreUriCase: true
      rewrite:
        uri: /todos
      route:
        - destination:
            port:
              number: 80
            host: todo
